# melo

./: Cargo.toml  Makefile  README.md  install.sh  justfile  test.md
.github/workflows/: release.yml
src/: action.rs  app.rs  config.rs  event.rs  input.rs  main.rs  terminal.rs  watcher.rs
src/markdown/: image.rs  mod.rs  parser.rs  renderer.rs  theme.rs
src/ui/: help.rs  links.rs  mod.rs  status_bar.rs  toc.rs  viewport.rs
