[package]
name = "melo"
version = "0.1.0"
edition = "2024"
description = "A mellow TUI markdown viewer"

[dependencies]
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = "0.29"
pulldown-cmark = "0.13"
syntect = "5"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
